# aws-playground

./: README.md
.github/workflows/: pipeline.yml
codedeploy-playground/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
codedeploy-playground/modules/codedeployapp/: main.tf  outputs.tf  variables.tf
codedeploy-playground/modules/policies/: main.tf  outputs.tf  variables.tf
django-aws/django-aws-backend/: Dockerfile  docker-compose.yml  requirements.txt
django-aws/django-aws-backend/django_aws/: settings.py  tests.py
django-aws/django-aws-infrastructure/: backend_web_shell.sh  ecs.tf  load_balancer.tf  network.tf  provider.tf  rds.tf  variables.tf
django-aws/django-aws-infrastructure/templates/: backend_container.json.tpl
fastapi-aws/: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
fastapi-aws/app/: main.py
fastapi-aws/app/models/: sota_model.joblib
fastapi-aws/infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
lambda-ml/: .gitignore  main.tf  variables.tf
load-balancers/: .gitignore  main.tf  outputs.tf  variables.tf
vpc-playground/: main.tf  variables.tf
vpc-playground/modules/policies/: main.tf  variables.tf
