[tool.poetry]
name = "fastapi-aws"
version = "0.1.0"
description = ""
authors = ["Kacper Stasica <kacperstasica@yahoo.pl>"]
readme = "README.md"
packages = [{include = "fastapi_aws"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "*"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"